--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,9 @@
             <hr>
             <p class="text-small-margin">
               <div class="col">
+                <!-- <li>
+                  R. Mottier, A. Ern and L. Guillot, <b> &nbsp; Elasto-acoustic wave propagation in geophysical media using hybrid high-order methods on general meshes </b> <a href=https://hal.science/hal-04990318> <b>[HAL]</b></a></b></a> <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a> <a href="articles/BEM_2025.pdf"> <b>[PDF]</b></a> <br> <br>
+                </li> -->
                 <li>
                   E. Burman, A. Ern and R. Mottier, <b> &nbsp; Unfitted hybrid high-order methods stabilized by polynomial extension for elliptic interface problems </b> <a href=https://hal.science/hal-04990318> <b>[HAL]</b></a></b></a> <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a> <a href="articles/BEM_2025.pdf"> <b>[PDF]</b></a> <br> <br>
                 </li>
