--- a/index_fr.html
+++ b/index_fr.html
@@ -107,7 +107,10 @@
             <p class="text-small-margin">
               <div class="col">
                 <li>
-                  R. Mottier, AE, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br>
+                  E. Burman, A. Ern and R. Mottier, <b> &nbsp; Unfitted hybrid high-order methods stabilized by polynomial extension for elliptic interface problems </b> <a href=https://hal.science/hal-04990318> <b>[HAL]</b></a></b></a> <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a> <a href="articles/BEM_2025.pdf"> <b>[PDF]</b></a> <br> <br>
+                </li>
+                <li>
+                  R. Mottier, A. Ern, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href=http://arxiv.org/abs/2502.10870> <b>[arXiv]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br> <br>
                 </li>
               </div>
             </p>
@@ -125,7 +128,7 @@
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes "unfitted"<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes des éléments finis (FEM)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes polytopales d'ordre élevé (HHO - HDG - DG - VEM)<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes polytopales d'ordre élevé (HHO - HDG - dG)<br> 
               </p>
             </div>
           
