--- a/publications.html
+++ b/publications.html
@@ -43,8 +43,8 @@
             <p class="text-small-margin">
               <div class="col">
                 <li>
-                  R. Mottier, A. Ern and L. Guillot, <b> &nbsp; Elasto-acoustic wave propagation in geophysical media using hybrid high-order methods on general meshes </b> <a href=https://hal.science/hal-05076055> <b>[HAL]</b></a></b></a> 
-                  <!-- <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a> <a href="articles/BEM_2025.pdf"> <b>[PDF]</b></a> --> <br> <br>
+                  R. Mottier, A. Ern and L. Guillot, <b> &nbsp; Elasto-acoustic wave propagation in geophysical media using hybrid high-order methods on general meshes </b> <a href=https://hal.science/hal-05076055> <b>[HAL]</b></a><a href="articles/MEG_2025.pdf"> <b>[PDF]</b></a> </b></a> 
+                  <!-- <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a>-->  <br> <br>
                 </li>
                 <li>
                   E. Burman, A. Ern and R. Mottier, <b> &nbsp; Unfitted hybrid high-order methods stabilized by polynomial extension for elliptic interface problems </b> <a href=https://hal.science/hal-04990318> <b>[HAL]</b></a></b></a> <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a> <a href="articles/BEM_2025.pdf"> <b>[PDF]</b></a> <br> <br>
