--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,12 @@
                 September 2023 - <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a>
             </p>
             
+            <h2 id="journal-paper">Thesis</h2>
+            <hr>
+            <p class="text-small-margin">
+                <b>Manuscript - </b><a href="articles/THESIS_MOTTIER.pdf"><b>[PDF]</b></a><br> 
+            </p>
+
           <style>
             li {
               margin-bottom: -15px; /* Ajustez la valeur en fonction de l'espace souhaité */
