--- a/publications.html
+++ b/publications.html
@@ -83,8 +83,9 @@
             <h2 id="journal-paper">Thesis</h2>
             <hr>
             <p class="text-small-margin">
-                <b>Manuscript - </b><a href="articles/THESIS_MOTTIER.pdf"><b>[PDF]</b></a><br> <br> 
-                <b>Codes:</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://github.com/romainmottier/Disk/tree/Wave_Propagation"><b>Disk++ (wave propagation)</b></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://github.com/romainmottier/ProtoN/tree/POLY_EXT"><b>ProtoN (unfitted HHO with polynomial extension)</b></a><br> 
+                <b>Manuscript &nbsp;&nbsp; </b><a href="articles/THESIS_MOTTIER.pdf"><b>[PDF]</b></a><br> 
+                <b>Codes:</b> &nbsp;&nbsp; <a href="https://github.com/romainmottier/Disk/tree/Wave_Propagation"><b>Disk++ (wave propagation)</b></a> <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://github.com/romainmottier/ProtoN/tree/POLY_EXT"><b>ProtoN (unfitted HHO with polynomial extension)</b></a><br> 
                 <br> 
             </p>
 
