--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
             <p class="text-small-margin">
               <div class="col">
                 <li>
-                  R. Mottier, A. Ern and L. Guillot, <b> &nbsp; Elasto-acoustic wave propagation in geophysical media using hybrid high-order methods on general meshes </b> <a href=https://hal.science/hal-05076055> <b>[HAL]</b></a><a href="articles/MEG_2025.pdf"> <b>[PDF]</b></a> </b></a> 
+                  R. Mottier, A. Ern and L. Guillot, <b> &nbsp; Elasto-acoustic wave propagation in geophysical media using hybrid high-order methods on general meshes </b> <a href=https://hal.science/hal-05076055> <b>[HAL]</b></a> <a href=https://arxiv.org/abs/2505.15771> <b>[arXiv]</b></a><a href="articles/MEG_2025.pdf"> <b>[PDF]</b></a> </b></a> 
                   <!-- <a href=https://arxiv.org/abs/2503.11397> <b>[arXiv]</b></a></b></a>-->  <br> <br>
                 </li>
                 <li>
