--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,8 @@
             <h2 id="journal-paper">Talks</h2>
             <hr>
             <p class="text-small-margin">
+                <b>Thesis defense</b> - Paris (France) - July 2025 - <a href="slides/THESIS_DEFENSE.pdf"> <b>[PDF]</b></a><br><br>
+                
                 <b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b> <br> 
                 <a href="https://www.wccm2024.org/" target="_blank"><I> 
                 World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
