--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
                     <div class="flex-item flex-column">
                         <h2>Romain Mottier </h2> <br>
                         <p class="text">
-                            PhD student in Applied Mathematics for Computational Physics<br>
-                            romain.mottier@outlook.com<br>
-                            <a href="https://www.cea.fr/english" target="_blank"><b><FONT COLOR="#000000">French Alternative Energies and Atomic Energy Commission (CEA)</FONT></a></b><br>
-                            <a href="https://cermics-lab.enpc.fr/" target="_blank"><b><FONT COLOR="#000000">Teaching and Research Center in Mathematics and Scientific Computing (CERMICS)</FONT></b></a><br>
-                            <a href="https://team.inria.fr/serena/" target="_blank"><b><FONT COLOR="#000000">French Institute for Research in Numerical Science and Technology (INRIA - SERENA)</FONT></b></a><br><br>
+                            Postdoc researcher in <b>computational physics</b> and <b>applied mathematics (numerical analysis)</b> <br>
+                            <a href="https://dmi.unibas.ch/en/" target="_blank"><FONT COLOR="#000000">University of Basel, Department of Mathematics and Computer Science </FONT></a><br>
+                            romain.mottier@outlook.com<br><br>
                             Welcome to my academic webpage!
                         </p>
                     </div>
@@ -72,21 +70,15 @@
                         <hr>
                         <p class="text">
                             <Div Align=justify> 
-                                I am a PhD student in applied mathematics for the numerical simulation of physic problems under the direction of 
-                                <a href="http://cermics.enpc.fr/~ern/home.html" style="text-decoration: none; color: black;" target="_blank"><b>Alexandre Ern</b></a> at 
-                                <a href="https://cermics-lab.enpc.fr/" style="text-decoration: none; color: black;" target="_blank">CERMICS, École des Ponts ParisTech</a> 
-                                and <a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black;" target="_blank">Inria</a>. I am also 
-                                co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black;" target="_blank">CEA</a>.<br><br>
+
+                                I am a Postdoctoral researcher in applied mathematics for the numerical simulation of complex physic problems. <br><br>
+
+                                As a computational scientist I have a strong background in <b>numerical methods</b> with skills in <b>numerical analysis</b> for PDEs and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics</b> (fluid and solid mechanics, geophysics or biology). I am also interested in the optimization and the portability of the numerical methods on high performance computing architectures (HPC).<br><br>
                                 
-                                As a computational scientist I have a strong background in <b>numerical methods</b> with skills in <b>numerical analysis</b> for partial differential 
-                                equations (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics</b> (fluid and solid mechanics, geophysics or biology). I am 
-                                also interested in the optimization and the portability of the numerical methods on high performance computing architectures (HPC).<br><br>
-                                
-                                More specifically, my research is focused on the use of <b>non conforming hybrid high-order finite element methods (HDG/HHO)</b> especially in the context of 
-                                <b>unfitted methods</b> (also known as embedded or immersed methods). These latter allow the boundary or physical interfaces to cut arbitrarily through the mesh 
-                                cells. By coupling them with HDG/HHO methods, the idea is to achieve a high-order approximation of our problem while greatly simplifying the mesh generation. 
-                                In this framework, I am currently working on the <b>numerical simulation of the propagation of elasto-acoustic waves (coupling between the seismic field and 
-                                atmospheric acoustics or the water)</b>, using the methods mentioned above.
+                                More specifically, my thesis focused on the use of <b>non conforming hybrid high-order finite element methods (HDG/HHO)</b> especially in the context of 
+                                <b>unfitted methods</b>. These latter allow the boundary or physical interfaces to cut arbitrarily through the mesh 
+                                cells. 
+
                             </Div>
                         </p>
                         <h2 id="journal-paper">Research interests</h2>
@@ -98,10 +90,10 @@
                                         <b>Numerical methods:</b><br>
                                     </li>
                                     <p>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Unfitted methods<br>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Finite Element Methods (FEM)<br> 
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; High-order polytopal methods<br> 
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (HHO - HDG - dG) 
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; High-order nonconforming polytopal methods (HHO - HDG - dG) <br>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Unfitted methods (also known as embedded or immersed methods)<br>
+
                                     </p>
                                 </div>
                                 <div class="col">
@@ -109,8 +101,8 @@
                                         <b>Application domains:</b><br>
                                     </li>
                                     <p>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Solid and Fluid Mechanics<br>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Geophysics (wave propagation - climate modeling)<br> 
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Solid and Fluid Mechanics<br>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Biology<br><br>
                                     </p>
                                 </div>
