--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
       <img class="noselect" src="img/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a href="publications.html">Publications</a>
+      <a href="publications.html">Publications & Talks</a>
       <a href="file/CV.pdf">CV</a>
       <a href="https://github.com/romainmottier">GitHub</a>
       <a href="https://linkedin.com/in/romain-mottier-computational-physics">LinkedIn</a>
