--- a/publications.html
+++ b/publications.html
@@ -56,9 +56,7 @@
             </p>
             <h2 id="journal-paper">Talks</h2>
             <hr>
-            <p class="text-small-margin">
-                <b>Thesis defense</b> - Paris (France) - July 2025 - <a href="slides/THESIS_DEFENSE.pdf"> <b>[PDF]</b></a><br><br>
-                
+            <p class="text-small-margin">                
                 <b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b> <br> 
                 <a href="https://www.wccm2024.org/" target="_blank"><I> 
                 World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
@@ -85,6 +83,7 @@
             <h2 id="journal-paper">Thesis</h2>
             <hr>
             <p class="text-small-margin">
+                <b>Thesis defense</b> - Paris (France) - July 2025 - <a href="slides/THESIS_DEFENSE.pdf"> <b>[PDF]</b></a><br>
                 <b>Manuscript &nbsp;&nbsp; </b><a href="articles/THESIS_MOTTIER.pdf"><b>[PDF]</b></a><br> 
                 <b>Codes:</b> &nbsp;&nbsp; <a href="https://github.com/romainmottier/Disk/tree/Wave_Propagation"><b>Disk++ (wave propagation)</b></a> <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://github.com/romainmottier/ProtoN/tree/POLY_EXT"><b>ProtoN (unfitted HHO with polynomial extension)</b></a><br> 
