--- a/teaching.html
+++ b/teaching.html
@@ -42,6 +42,13 @@
           <h2 id="journal-paper">Teaching</h2>
           <hr>
           <p class="text-small-margin"></p>
+                      <li>
+              <b>Fall semester 2025 - University of Basel:</b><br>
+            </li>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Semester project for the course: Numerical Methods for Partial Differential Equations (Master course) <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Project: P1-FEM for linear elasticity in 2D <a href="file/teaching/BASEL/project_fall2025.pdf"><b>[PDF]</b></a><br><br><br>
+            </p>
             <li>
               <b>Spring semester 2023 - Paris Dauphine University:</b><br>
             </li>
